# dsp

./: Cargo.toml  README.md
docs/: onboarding.md  rust_dsp_library_design.md
examples/: buffer_demo.rs  core_demo.rs  math_demo.rs  oscillators_demo.rs
src/: lib.rs
src/buffer/: audio_buffer.rs  mod.rs
src/core/: constants.rs  mod.rs  parameter.rs  sample.rs  sample_rate.rs
src/math/: conversion.rs  fast_math.rs  interpolation.rs  mod.rs  smoother.rs  window.rs
src/oscillators/: mod.rs  noise.rs  oscillator.rs  saw.rs  sine.rs  square.rs  triangle.rs
